app/dialogs/file_picker/file_picker.css
StackLayout{
     background-color:white;
     opacity:.8;
     height:90%;
}

ListView{
    color : black;
    border-width:0;
    margin-left:20;
    margin-right:20;
}

#item-icon {
    font-size:38;
    margin-right:10;
}

#item-icon[isFile = true]{
    color:#ffee58;
}

#item-icon[isFile = false]{
    color:#26c6da;
}

#item-name{
    font-size:25;
    width:80%;
}

ListView FlexboxLayout{
    align-items:center;
}

